--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = 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
+OPENAI_API_KEY = sk-y***********************************************
